fixed alignment
fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ ul li.active a {
 .clsScroll {
 	padding-top: 30px; 
 	position: fixed;
-	top: 60%;
+	top: 60vh;
 	left: 50%;
 	transform: translate(-50%,-50%);
 }
@@ -182,7 +182,7 @@ ul li a{
 
 .bar ul{
 	position: fixed;
-	left: 25%;
+	left: 25vw;
 }
 
 
@@ -200,6 +200,7 @@ ul li a{
 
 .clsScroll {
 	position: fixed;
+	top: 80vh;
 	left: 50%;
 	transform: translate(-50%,-50%);
 }
